<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888888"
    tools:context="com.gannett.customclicklistener.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
